--- a/src/template.html
+++ b/src/template.html
@@ -75,7 +75,7 @@
               
               </p>
               <p class="about-wrapper__info-text">
-                I am also one of those ambitious
+                I am an ambitious
                 and hardworking individual but combined with
                 much more required skills such as the smartworking and the time management skills, with
                 problem solving ability and experience in
@@ -90,6 +90,7 @@
                 than 70+ students like me to step in and taste
                 the essence of programming.(Not as a
                 commercial purpose)
+                | Scroll Down For More |
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1Uw-dKBVgyqvuwdxBMDSYTrv7Wx7jNkbN/view?usp=sharing">
