--- a/src/template.html
+++ b/src/template.html
@@ -579,7 +579,7 @@
                 <h3 class="project-wrapper__text-title">OpenCV project for facial recognition</h3>
                 <div>
                   <p class="mb-4">
-                   A facial recognition tool that can be used with any project to give it the power of facial recognition.
+                   A facial recognition tool that can be used with any project to give it the power of face and expression recognition(Also supported in all cross browsers).
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Vinamra2009/OpenCV">
