--- a/src/template.html
+++ b/src/template.html
@@ -603,7 +603,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">ML model to predict the suitable sport.</h3>
+                <h3 class="project-wrapper__text-title">ML model to predict suitable sport based on physique.</h3>
                 <div>
                   <p class="mb-4">
                    A model that will help you predict the best game for you based on your body physique by relating it with the body physique 
