--- a/src/template.html
+++ b/src/template.html
@@ -465,7 +465,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">ML model to predict the Covid-19 Cases</h3>
+                <h3 class="project-wrapper__text-title">Covid-19 Tracker ML model</h3>
                 <div>
                   <p class="mb-4">
                     Using the power of Linear Regression algorithms and the vast amount of data 
@@ -493,7 +493,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Flutter App to calculate productivity</h3>
+                <h3 class="project-wrapper__text-title">Productivity calculation application made using Flutter</h3>
                 <div>
                   <p class="mb-4">
                    A Flutter App that shows one's productivity on a day with in a more visually nice way which motivates one to 
@@ -521,7 +521,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">ML model to predict suitable college</h3>
+                <h3 class="project-wrapper__text-title">Prediction of suitable college ML model</h3>
                 <div>
                   <p class="mb-4">
                    A model based on K-Means Clustering to predict the more suitable college to one based on his 
@@ -549,7 +549,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">This website using HTML,SCSS and Vanilla JS</h3>
+                <h3 class="project-wrapper__text-title">Portfolio website using HTML,SCSS and Vanilla JS</h3>
                 <div>
                   <p class="mb-4">
                    A simple,classic website as a profile.
@@ -576,7 +576,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">OpenCV project for facial recognition</h3>
+                <h3 class="project-wrapper__text-title">OpenCV project for facial and expression recognition</h3>
                 <div>
                   <p class="mb-4">
                    A facial recognition tool that can be used with any project to give it the power of face and expression recognition(Also supported in all cross browsers).
