--- a/src/template.html
+++ b/src/template.html
@@ -70,7 +70,7 @@
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
                 Hey, this is vinamra here and on the left/above(if viewed on Mobile) is the photo of mine.
-                I'm currently pursuing Bachelors of Computer Science (3rd Year) at RNS 
+                I'm currently pursuing Bachelors of Computer Science, 3rd Year at RNS 
                 institute of technology.
               
               </p>
