--- a/src/template.html
+++ b/src/template.html
@@ -367,7 +367,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/comingsoon2.png" />
+                    <img class="img-fluid" src="./assets/Grip.jpg" />
                   </div>
                 </a>
               </div>
