--- a/src/template.html
+++ b/src/template.html
@@ -393,7 +393,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" style="padding:25px 0px 0px 0px " src="./assets/comingsoon2.png" />
+                    <img class="img-fluid" style="padding:25px 0px 0px 0px " src="./assets/IStudio.jpg" />
                   </div>
                 </a>
               </div>
