--- a/src/template.html
+++ b/src/template.html
@@ -252,6 +252,7 @@
               <div class="col-sm col-12">
                 <a href="#!" target="_blank">
                   <div class="project-wrapper__image">
+                    <img class="img-fluid" width="295" height="295" src="./assets/mysql.png" />
                     <img class="img-fluid" width="295" height="295" src="./assets/mongo.png" />
                     <img class="img-fluid" width="295" height="295" src="./assets/postgre.jpg" />
                     <img class="img-fluid" width="295" height="295" src="./assets/firebase.png" />
