--- a/src/template.html
+++ b/src/template.html
@@ -69,7 +69,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Hey, this is vinamra here and on the left/above(if viewed on Mobile) is the photo of mine.
+                Hey, this is Vinamra here and on the left/above(if viewed on Mobile) is the photo of mine.
                 I'm currently pursuing Bachelors of Computer Science, 3rd Year at RNS 
                 institute of technology.
               
@@ -356,7 +356,7 @@
                 <h1 class="project-wrapper__text-title">The Spark Foundation</h1>
                 <div>
                   <p class="mb-4">
-                    Built a dynamic website using HTML,CSS and JS, connected to the payment gateway for an ngo to collect funds.
+                    Built a dynamic website using HTML,CSS and JS, connected to the payment gateway for an NGO to collect funds.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Vinamra2009/Donate">
