--- a/src/template.html
+++ b/src/template.html
@@ -382,7 +382,7 @@
                 <h1 class="project-wrapper__text-title" style="padding:25px 0px 0px 0px ">Internship Studio</h1>
                 <div>
                   <p class="mb-4">
-                    With the help of a datset of various information of the users of the bank and this model predicts that how many users are more probable to take a loan from the bank as the bank wants to increase its loan takers and assets.
+                    With the help of a dataset of various information of the users of the bank and this model predicts that how many users are more probable to take a loan from the bank as the bank wants to increase its loan takers and assets.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Vinamra2009/Marketing-Campaign-for-Banking-Products-Project">
