--- a/src/template.html
+++ b/src/template.html
@@ -353,6 +353,32 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text"><br>
+                <h1 class="project-wrapper__text-title">Med Tour Easy</h1>
+                <div>
+                  <p class="mb-4">
+                    Built a dynamic website using HTML,CSS and JS, connected to the payment gateway for an NGO to collect funds.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Vinamra2009/Donate">
+                  Source code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/Medtoureasy.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+        <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text"><br>
                 <h1 class="project-wrapper__text-title">The Spark Foundation</h1>
                 <div>
                   <p class="mb-4">
