--- a/src/template.html
+++ b/src/template.html
@@ -374,7 +374,7 @@
               </div>
             </div>
           </div>
-          <!-- /END Project -->
+          <!-- /END Project --><br>&nbsp;
         <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
