--- a/src/template.html
+++ b/src/template.html
@@ -356,7 +356,7 @@
                 <h1 class="project-wrapper__text-title">Med Tour Easy</h1>
                 <div>
                   <p class="mb-4">
-                    Built a dynamic website using HTML,CSS and JS, connected to the payment gateway for an NGO to collect funds.
+                    Built a Machine Learning Model using under the topic of Predict Blood Donations.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Vinamra2009/Donate">
