--- a/src/template.html
+++ b/src/template.html
@@ -320,7 +320,7 @@
     <footer class="footerup navbar-static-bottom">
       <div class="container">
         <h2 class="section-title">
-          Internships
+          Internships/Trainings
         </h2>
         <!-- Each .row is a project -->
         <div class="row">
