--- a/src/template.html
+++ b/src/template.html
@@ -487,6 +487,33 @@
           <h2 class="section-title dark-blue-text">
             Projects
           </h2>
+          
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">FailTell(Contribs.)</h3>
+                <div>
+                  <p class="mb-4">
+                   A social media application built on an innovated concept made using MERN stack accompanied with GraphQL and oauth.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/comingsoon2.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- Each .row is a project -->
           <div class="row">
