--- a/src/template.html
+++ b/src/template.html
@@ -334,7 +334,7 @@
                 </p>
               </div>
               <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Vinamra2009/Sports">
-                Source Code
+                Private Code
               </a>
             </div>
           </div>
