--- a/src/template.html
+++ b/src/template.html
@@ -499,7 +499,7 @@
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  Source Code
+                  Code under private repo.
                 </a>
               </div>
             </div>
