--- a/src/template.html
+++ b/src/template.html
@@ -495,7 +495,7 @@
                    A social media application built on an innovated concept made using MERN stack accompanied with GraphQL and oauth.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero disabled" href="#!">
                   Code under private repo.
                 </a>
               </div>
