--- a/src/template.html
+++ b/src/template.html
@@ -495,8 +495,8 @@
                    A social media application built on an innovated concept made using MERN stack accompanied with GraphQL and oauth.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero disabled" href="#!">
-                  Code under private repo.
+                <a target="_blank" class="cta-btn cta-btn--hero disabled" href="https://www.failtell.com/">
+                  Website
                 </a>
               </div>
             </div>
@@ -548,12 +548,9 @@
                 <div>
                   <p class="mb-4">
                    A Flutter App that shows one's productivity on a day with in a more visually nice way which motivates one to 
-                   work more and with much efficiency.
+                   work more and with much efficiency. (Under Development)
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
-                  Source Code
-                </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
