--- a/src/template.html
+++ b/src/template.html
@@ -165,10 +165,10 @@
                   <div class="project-wrapper__image">
                     <img class="img-fluid" width="295" height="295" src="./assets/html.png" />
                     <img class="img-fluid" width="295" height="295" src="./assets/css.png" />
-                    <img class="img-fluid" width="295" height="295" src="./assets/react.png" />
-                    <img class="img-fluid" width="295" height="295" src="./assets/express.jpg" />
-                    <img class="img-fluid" width="295" height="295" src="./assets/node.jpg" />
                     <img class="img-fluid" width="295" height="295" src="./assets/jquery.png" />
+                    <img class="img-fluid" width="295" height="295" src="./assets/react.jpg" />
+                    <img class="img-fluid" width="295" height="295" src="./assets/express.jpg" />
+                    <img class="img-fluid" width="295" height="295" src="./assets/node.png" />
                   </div>
                 </a>
               </div>
