--- a/src/template.html
+++ b/src/template.html
@@ -350,7 +350,7 @@
         </div>
         <!-- /END Project --><br>&nbsp;
         <!-- Each .row is a project -->
-         <div class="row">
+         <!--<div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text"><br>
                 <h1 class="project-wrapper__text-title">Med Tour Easy</h1>
@@ -373,7 +373,7 @@
           </div>
           <!-- /END Project --><br>&nbsp;
         <!-- Each .row is a project -->
-          <div class="row">
+          <!--<div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text"><br>
                 <h1 class="project-wrapper__text-title">The Spark Foundation</h1>
@@ -399,7 +399,7 @@
           </div>
           <!-- /END Project -->
           <!-- Each .row is a project -->
-          <div class="row">
+          <!--<div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text"><br>
                 <h1 class="project-wrapper__text-title" style="padding:25px 0px 0px 0px ">Internship Studio</h1>
